docs: add tag description and basepath for petstore api
